--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,4 @@
-browser-cookie3==0.19.1
-contourpy==1.3.0
-cycler==0.12.1
-fonttools==4.53.1
-greenlet==3.0.3
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.0.2
-keyring==25.3.0
-kiwisolver==1.4.7
-lz4==4.3.3
-matplotlib==3.9.2
-more-itertools==10.4.0
-msgpack==1.0.8
-numpy==2.1.1
-packaging==24.1
+asgiref==3.8.1
+Django==5.1.1
 pillow==10.4.0
-pycryptodomex==3.20.0
-pynvim==0.5.0
-pyparsing==3.1.4
-python-dateutil==2.9.0.post0
-pywin32-ctypes==0.2.3
-six==1.16.0
+sqlparse==0.5.1
