--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-asgiref==3.8.1
-Deprecated==1.2.15
-Django==5.1.3
-pillow==11.0.0
-sqlparse==0.5.2
-wrapt==1.17.0
+asgiref
+Deprecated
+Django
+pillow
+sqlparse
+wrapt
